--- a/app/sass/_cart.scss
+++ b/app/sass/_cart.scss
@@ -1,53 +1,83 @@
 .cart {
   position: absolute;
-  z-index: 4;
+  z-index: 7;
   top: 17px;
   right: 13px;
   background: rgba(125,125,125,0.9);
   border-radius: 27px;
-  -webkit-transition: top 0.3s ease;
-  transition: top 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  color: #fff;
+  font-size: 13px;
+  line-height: 18px;
+  @include main-font2();
+  text-transform: uppercase;
+  letter-spacing: 1px;
 
-  span {
+  >span {
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
     width: 27px;
     height: 27px;
-    background: url('../img/cart.png') center no-repeat;
+    background-image: url('../img/cart.png');
+    background-repeat: no-repeat;
+    background-position: center;
     background-size: 16px 14px;
   }
 
 }
+.cart_fill {
+  background: #9e0b0f;
+  padding: 0 8px;
+
+  >span {
+    background-image: url('../img/cart-fill.png');
+  }
+
+  >div {
+    display: inline-block;
+    vertical-align: middle;
+  }
+}
+
 @media (min-width: $desktop) {
 
   .cart {
     top: 10px;
-    right: -5px;
+    right: 55px;
     background: transparent;
     -webkit-transition: background-color 0.3s ease;
     transition: background-color 0.3s ease;
+    font-size: 26px;
+    line-height: 28px;
 
     &:hover {
       background-color: rgba(83, 46, 30, 0.2);
     }
 
-    span {
-      display: inline-block;
-      vertical-align: top;
+    >span {
       width: 50px;
       height: 50px;
-      background: url('../img/cart-desktop.png') center no-repeat;
+      background-image: url('../img/cart-desktop.png');
       background-size: 25px 21px;
 
     }
 
   }
+  .cart_fill {
+    right: 10px;
+    padding: 0 20px 0 7px;
+
+    &:hover {
+      background-color: #7a222e;
+    }
+
+  }
 
 }
-@media (min-width: $desktop) {
+@media (min-width: $desktop-wide) {
 
   .cart {
-    top: 10px;
     right: -5px;
   }
 
