--- a/app/sass/_logo.scss
+++ b/app/sass/_logo.scss
@@ -1,12 +1,16 @@
 .logo {
   position: absolute;
+  z-index: 5;
   top: 14px;
   left: 50%;
   width: 130px;
   height: 99px;
-  @include transform-translate( -50%,  0 );
+  -webkit-transform: translateX(-50%) translateZ(0);
+  transform: translateX(-50%) translateZ(0);
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 
   >img {
     display: block;
@@ -24,6 +28,7 @@ a.logo {
 }
 @media (min-width: $desktop) {
   .logo {
+    z-index: 7;
     top: 17px;
     width: 231px;
     height: 176px;
