--- a/app/sass/_nice-checkbox.scss
+++ b/app/sass/_nice-checkbox.scss
@@ -22,16 +22,18 @@
 
   }
   label {
+    display: block;
     position: relative;
-    display: flex;
-    text-align: left;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 20px;
-    padding-left: 25px;
-    color: $nice-checkbox-color;
+    min-height: 30px;
+    margin: 0;
+    padding: 5px 0 0 49px;
     cursor: pointer;
+    font-size: 18px;
+    line-height: 22px;
+    color: #9a9a9a;
+    @include main-font4();
+    letter-spacing: 3px;
+    text-transform: uppercase;
 
     &:after,
     &:before {
@@ -42,19 +44,22 @@
     &:after {
       top: 0;
       left: 0;
-      width: 15px;
-      height: 15px;
-      border: 2px solid $nice-checkbox-after-color;
+      width: 24px;
+      height: 24px;
+      border: 2px solid #959595;
+      border-radius: 3px;
     }
 
     &:before {
       display: none;
-      top: 7px;
-      left: 7px;
-      border-radius: 50%;
-      background: $nice-checkbox-after-color;
-      width: 5px;
-      height: 5px;
+      top: 5px;
+      left: 10px;
+      width: 6px;
+      height: 12px;
+      border-right: 2px solid #7f2b36;
+      border-bottom: 2px solid #7f2b36;
+      -webkit-transform: rotate(45deg);
+      transform: rotate(45deg);
       content: '';
     }
 
