--- a/app/sass/_our-cookies.scss
+++ b/app/sass/_our-cookies.scss
@@ -3,34 +3,30 @@
   position: relative;
   min-height: 440px;
 
-  .swiper-slide {
+  .slick-list {
+    min-height: 440px;
+  }
+  .slick-slide {
     text-align: center;
     background: #fff;
   }
-  .swiper-slide-active {
-    opacity: 1;
-    visibility: visible;
-    -webkit-transition: opacity 0.3s ease, visibility 0.3s ease;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
-  }
-  .swiper-pagination {
-    bottom: 36px;
+  .slick-prev,
+  .slick-next {
+    position: absolute;
+    top: 50%;
+    width: 27px;
+    height: 44px;
+    margin-top: -22px;
+    z-index: 10;
+    cursor: pointer;
+    -moz-background-size: 27px 44px;
+    -webkit-background-size: 27px 44px;
+    background-size: 27px 44px;
+    background-position: center;
+    background-repeat: no-repeat;
+    border: none;
+    text-indent: -9999px;
 
-    .swiper-pagination-bullet {
-      opacity: 1;
-      width: 8px;
-      height: 8px;
-      margin: 0 8px;
-      border: 2px solid #ec1c2c;
-      background: transparent;
-    }
-    .swiper-pagination-bullet-active {
-      background: #ec1c2c;
-    }
-
-  }
-  .swiper-button-prev,
-  .swiper-button-next {
     left: 16px;
     background: none;
     width: 40px;
@@ -49,20 +45,79 @@
       content: '';
       -webkit-transform: translate(-50%,-50%) rotate(-45deg);
       transform: translate(-50%,-50%) rotate(-45deg);
+      -webkit-transition: border 0.3s ease;
+      transition: border 0.3s ease;
+    }
+
+    &:hover {
+
+      &:after {
+        border-top-color: #7a222e;
+        border-left-color: #7a222e;
+      }
+
     }
 
   }
-  .swiper-button-next {
+  .slick-next {
     left: auto;
     right: 16px;
     -webkit-transform: rotate(-180deg);
     transform: rotate(-180deg);
   }
 
+  .slick-dots {
+    position: absolute;
+    text-align: center;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s;
+    -webkit-transform: translate3d(0,0,0);
+    -ms-transform: translate3d(0,0,0);
+    -o-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
+    z-index: 10;
+    bottom: 36px;
+    transform: translateX(0) translateY(-50%);
+    left: 0;
+    width: 100%;
+
+    li {
+      position: relative;
+      opacity: 1;
+      width: 8px;
+      height: 8px;
+      margin: 0 8px;
+      border: 2px solid #ec1c2c;
+      background: transparent;
+      cursor: pointer;
+      display: inline-block;
+      border-radius: 100%;
+
+      &.slick-active {
+        background: #ec1c2c;
+      }
+
+      button {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        text-indent: -9999px;
+        background: none;
+        border: none;
+      }
+
+    }
+
+  }
+
 }
 .our-cookies__inner {
-  max-width: 1400px;
-  margin: 0 auto;
+  //max-width: 1400px;
+  //margin: 0 auto;
 }
 .our-cookies__info {
   position: relative;
@@ -97,11 +152,21 @@
   .our-cookies {
     min-height: 650px;
 
+    .slick-list {
+      //overflow: visible;
+      //@include flexbox();
+      //@include flex-direction(row);
+      //@include align-items(center);
+      //@include justify-content(center);
+      //width: 100%;
+      //height: 100%;
+      //min-height: 700px;
+    }
+
     &.slides {
       opacity: 0;
       -webkit-transition: opacity 0.3s ease,  -webkit-transform 0.3s ease;
       transition: opacity 0.3s ease, transform 0.3s ease;
-
 
       .swiper-container {
         opacity: 0;
@@ -122,21 +187,7 @@
       }
 
     }
-
-    .swiper-container {
-      overflow: visible;
-      @include flexbox();
-      @include flex-direction(row);
-      @include align-items(center);
-      @include justify-content(center);
-      width: 100%;
-      height: 100%;
-      min-height: 700px;
-    }
-    .swiper-wrapper {
-      @include align-items(center);
-    }
-    .swiper-slide {
+    .slick-slide {
       opacity: 0;
       visibility: hidden;
       @include flexbox();
@@ -145,8 +196,31 @@
       @include justify-content(center);
       -webkit-transition: opacity 0.3s ease 1s, visibility 0.3s ease 1s;
       transition: opacity 0.3s ease 1s, visibility 0.3s ease 1s;
+
+      &.no-animate {
+        -webkit-transition: none;
+        transition: none;
+
+        .our-cookies__info {
+
+          .site__title,
+          p,
+          .btn {
+            -webkit-transition: none;
+            transition: none;
+
+          }
+
+        }
+        .our-cookies__pic {
+          -webkit-transition: none;
+          transition: none;
+        }
+
+      }
+
     }
-    .swiper-slide-active {
+    .slick-active {
       opacity: 1;
       visibility: visible;
       -webkit-transition: opacity 0.3s ease, visibility 0.3s ease;
@@ -171,20 +245,8 @@
       }
 
     }
-    .swiper-pagination {
-      bottom: 20px;
-      @include transform-translate( 0, -50% );
-
-      .swiper-pagination-bullet {
-        width: 13px;
-        height: 13px;
-        margin: 0 15px;
-        border: 4px solid #ec1c2c;
-      }
-
-    }
-    .swiper-button-prev,
-    .swiper-button-next {
+    .slick-prev,
+    .slick-next {
       top: 40.5%;
       left: 33px;
       width: 100px;
@@ -198,7 +260,7 @@
       }
 
     }
-    .swiper-button-next {
+    .slick-next {
       left: auto;
       right: 30px;
     }
@@ -210,11 +272,31 @@
       transition: transform .8s cubic-bezier(.08,.03,.22,.87) .6s,opacity 1s cubic-bezier(.08,.03,.22,.87) .6s;
     }
 
+    .slick-dots {
+      bottom: 20px;
+      @include transform-translate( 0, -50% );
+
+      li {
+        width: 13px;
+        height: 13px;
+        margin: 0 15px;
+        border: 4px solid #ec1c2c;
+
+      }
+
+    }
+
   }
   .our-cookies__info {
     width: 100%;
-    padding: 30px 140px 47px 50%;
+    min-height: 700px;
+    padding: 83px 140px 100px 50%;
     text-align: left;
+
+    @include flexbox();
+    @include flex-direction(column);
+    @include align-items(flex-start);
+    @include justify-content(center);
 
     .btn {
       opacity: 0;
@@ -271,6 +353,9 @@
 
   .our-cookies__pic {
     height: 530px;
+  }
+  .our-cookies__info {
+    min-height: 700px;
   }
 
 }
