--- a/app/sass/_social-networks.scss
+++ b/app/sass/_social-networks.scss
@@ -92,6 +92,54 @@
   }
 
 }
+.social-networks_3 {
+  padding: 16px 0 0;
+
+  >span {
+    margin: 0 0 7px;
+    font-size: 14px;
+    line-height: 20px;
+    color: #7a222e;
+    text-align: center;
+    @include main-font4();
+  }
+
+  .social-networks__item {
+    width: 33px;
+    height: 33px;
+    margin: 0 10px;
+
+    &_instagram {
+      height: 27px;
+    }
+
+    &:hover {
+
+      svg {
+        fill: #ed1b24;
+
+        path,
+        polygon {
+          fill: #ed1b24;
+        }
+
+      }
+
+    }
+
+    svg {
+      fill: #7a222e;
+
+      path,
+      polygon{
+       fill: #7a222el;
+      }
+
+    }
+
+  }
+
+}
 
 @media (min-width: $desktop) {
 
@@ -145,6 +193,58 @@
 
       &:first-child {
         margin-left: 0;
+      }
+
+    }
+
+  }
+  .social-networks_3 {
+    padding: 38px 0 0;
+    text-align: left;
+
+    >span {
+      position: relative;
+      opacity: 1;
+      visibility: visible;
+      display: inline-block;
+      vertical-align: middle;
+      margin: 3px 31px 0 0;
+      font-size: 24px;
+      line-height: 27px;
+      text-align: left;
+    }
+
+    .social-networks__item {
+      width: 35px;
+      height: 35px;
+      margin: 0 10px;
+
+      &_instagram {
+        height: 28px;
+      }
+
+      &:hover {
+
+        svg {
+          fill: #ed1b24;
+
+          path,
+          polygon {
+            fill: #ed1b24;
+          }
+
+        }
+
+      }
+
+      svg {
+        fill: #7a222e;
+
+        path,
+        polygon{
+          fill: #7a222e;
+        }
+
       }
 
     }
