--- a/app/sass/_not-found.scss
+++ b/app/sass/_not-found.scss
@@ -65,18 +65,18 @@
 
 @-webkit-keyframes round {
   0% {
-    -webkit-transform: translate(-50%, -50%) rotate(0deg);
+    -webkit-transform: rotate(0deg);
   }
   100% {
-    -webkit-transform: translate(-50%, -50%) rotate(360deg);
+    -webkit-transform: rotate(360deg);
   }
 }
 @keyframes round {
   0% {
-    transform: translate(-50%, -50%) rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-    transform: translate(-50%, -50%) rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
