--- a/app/sass/_hero.scss
+++ b/app/sass/_hero.scss
@@ -6,10 +6,13 @@
     width: 100%;
     height: 100%;
   }
+  .slick-list {
+    height: 100%;
+  }
   .slick-track {
     height: 100%;
   }
-  .slick-slide {
+  .slick-container__slide {
     text-align: center;
     @include flexbox();
     @include flex-direction(row);
