--- a/app/sass/_site.scss
+++ b/app/sass/_site.scss
@@ -60,8 +60,8 @@
   left: 0;
   width: 100%;
   height: 64px;
-  -webkit-transition: height 0.3s ease, top 0.3s ease, -webkit-transform 0.3s ease, background 0.3s ease, opacity 0.3s ease, visibility 0.3s ease;
-  transition: height 0.3s ease, top 0.3s ease, transform 0.3s ease, background 0.3s ease, opacity 0.3s ease, visibility 0.3s ease;
+  -webkit-transition: -webkit-transform 0.3s ease, background 0.3s ease, opacity 0.3s ease, visibility 0.3s ease;
+  transition: transform 0.3s ease, background 0.3s ease, opacity 0.3s ease, visibility 0.3s ease;
 
   &.opened-menu {
 
@@ -278,8 +278,6 @@
 }
 .site__menu-nav {
   margin: 0 0 33px;
-  -webkit-transition: height 0.3s ease, padding 0.3s ease;
-  transition: height 0.3s ease, padding 0.3s ease;
 
   ul {
 
@@ -328,6 +326,18 @@
   z-index: 1;
   -webkit-transition: padding 0.3s ease;
   transition: padding 0.3s ease;
+}
+.site__content_centered {
+  @include flexbox();
+  @include flex-wrap(wrap);
+  @include flex-direction(row);
+  @include align-items(center);
+  @include justify-content(center);
+
+  >div {
+    width: 100%;
+  }
+
 }
 .site__main-title {
   position: relative;
@@ -412,10 +422,9 @@ input[type="number"].site__input {
   overflow: hidden;
   position: absolute;
   z-index: 10;
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
   border-radius: 100%;
-  border: 2px solid #9e0b0f;
   background: #fff;
   -webkit-transition: opacity 0.3s ease, visibility 0.3s ease, top 0.5s ease, left 0.5s ease;
   transition: opacity 0.3s ease, visibility 0.3s ease, top 0.5s ease, left 0.5s ease;
