--- a/app/sass/_logo.scss
+++ b/app/sass/_logo.scss
@@ -7,8 +7,8 @@
   height: 99px;
   -webkit-transform: translateX(-50%) translateZ(0);
   transform: translateX(-50%) translateZ(0);
-  //-webkit-transition: all 0.3s ease;
-  //transition: all 0.3s ease;
+  -webkit-transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 
@@ -17,6 +17,7 @@
     display: block;
     width: 100%;
     height: auto;
+
     path{
       box-shadow: 0 0 0 10px rgba(0,0,0,0.6);
     }
