--- a/app/sass/_site.scss
+++ b/app/sass/_site.scss
@@ -613,8 +613,8 @@ input[type="number"].site__input {
   }
   .site__menu-link {
     padding: 0;
-    font-size: 28px;
-    line-height: 40px;
+    font-size: 22px;
+    line-height: 30px;
     color: #532e1e;
     -webkit-transition: background 0.3s ease, color 0.3s ease;
     transition: background 0.3s ease, color 0.3s ease;
@@ -700,8 +700,8 @@ input[type="number"].site__input {
     padding-top: 20px;
   }
   .site__footer-bottom {
-    background: url("../img/footer-bg.jpg") repeat;
-    background-size: auto 338px;
+    background: url("../img/footer-bg.jpg") repeat top center;
+    background-size: auto 383px;
     font-size: 13px;
     line-height: 18px;
     color: #fff;
