--- a/app/sass/cart-page.scss
+++ b/app/sass/cart-page.scss
@@ -5,6 +5,7 @@
 @import "fonts/gotham-medium";
 @import "fonts/gotham-bold";
 @import "fonts/gotham-book";
+@import "fonts/roboto-black";
 @import "btn";
 @import "logo";
 @import "cart";
