--- a/app/sass/content-page.scss
+++ b/app/sass/content-page.scss
@@ -10,13 +10,6 @@
 @import "logo";
 @import "cart";
 @import "social-networks";
-@import "hero";
-@import "our-cookies";
-@import "about-us";
-@import "real-staff";
-@import "store-finder";
-@import "websters-select";
-@import "products-cookies";
 @import "popup";
-@import "cookies-info";
+@import "content";
 
