--- a/app/sass/_contact-us.scss
+++ b/app/sass/_contact-us.scss
@@ -17,6 +17,11 @@
   font-size: 14px;
   line-height: 17px;
   font-style: normal;
+
+  a {
+    color: #7a222e;
+  }
+
 }
 .contact-us__layout {
   position: relative;
