--- a/app/sass/_site.scss
+++ b/app/sass/_site.scss
@@ -60,8 +60,6 @@
   left: 0;
   width: 100%;
   height: 64px;
-  -webkit-transition: -webkit-transform 0.3s ease, background 0.3s ease, opacity 0.3s ease, visibility 0.3s ease;
-  transition: transform 0.3s ease, background 0.3s ease, opacity 0.3s ease, visibility 0.3s ease;
 
   &.opened-menu {
 
@@ -76,13 +74,15 @@
   &.site__header_hide {
     -webkit-transform: translateY(-150%);
     transform: translateY(-150%);
-    -webkit-transition: none;
-    transition: none;
+    -webkit-transition: -webkit-transform 0.3s ease;
+    transition: transform 0.3s ease;
   }
   &.site__header_fixed {
     position: fixed;
     box-shadow: 0 0 15px 0 rgba(0,0,0,0.2);
     background: rgba(255,255,255,0.98);
+    -webkit-transition: -webkit-transform 0.3s ease;
+    transition: transform 0.3s ease;
 
     .logo {
       z-index: 7;
@@ -843,6 +843,18 @@ input[type="number"].site__input {
     line-height: 68px;
     padding: 61px 20px 61px;
     letter-spacing: 12px;
+  }
+  .site__main-title_3 {
+    margin: 0 0 12px;
+    padding: 36px 20px 23px;
+    font-size: 28px;
+    line-height: 34px;
+  }
+  .site__main-title_4 {
+    margin: 0 0 12px;
+    padding: 34px 20px 23px;
+    font-size: 32px;
+    line-height: 36px;
   }
 
 }
