--- a/app/sass/_site.scss
+++ b/app/sass/_site.scss
@@ -424,10 +424,11 @@ input[type="number"].site__input {
   z-index: 10;
   width: 70px;
   height: 70px;
-  border-radius: 100%;
-  background: #fff;
-  -webkit-transition: opacity 0.3s ease, visibility 0.3s ease, top 0.5s ease, left 0.5s ease;
-  transition: opacity 0.3s ease, visibility 0.3s ease, top 0.5s ease, left 0.5s ease;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  -webkit-transition: -webkit-transform 0.3s ease, opacity 0.3s ease, visibility 0.3s ease, top 0.5s ease, left 0.5s ease;
+  transition: transform 0.3s ease, opacity 0.3s ease, visibility 0.3s ease, top 0.5s ease, left 0.5s ease;
 
   &.hidden {
     opacity: 0;
@@ -436,6 +437,8 @@ input[type="number"].site__input {
   &.visible {
     opacity: 0.6;
     visibility: visible;
+    -webkit-transform: scale(0.2);
+    transform: scale(0.2);
   }
 
   img {
