--- a/app/sass/_checkout.scss
+++ b/app/sass/_checkout.scss
@@ -109,6 +109,13 @@
   padding: 30px 0 0;
   text-align: center;
 }
+.checkout__form {
+
+  &.hidden {
+    display: none;
+  }
+
+}
 
 @media (min-width: $desktop) {
 
