--- a/app/sass/_sign-up.scss
+++ b/app/sass/_sign-up.scss
@@ -5,15 +5,29 @@
   background: #fff;
   text-align: center;
 
-  input[type="submit"].site__input,
-  input[type="text"].site__input,
-  input[type="password"].site__input,
-  textarea.site__input,
-  input[type="email"].site__input,
-  input[type="tel"].site__input,
-  input[type="phone"].site__input,
-  input[type="number"].site__input {
+  input[type="submit"],
+  input[type="text"],
+  input[type="password"],
+  textarea,
+  input[type="email"],
+  input[type="tel"],
+  input[type="phone"],
+  input[type="number"] {
+    display: inline-block;
+    width: 100%;
     height: 34px;
+    background: transparent;
+    border: 1px solid #512c1d;
+    padding: 8px 5px;
+    font-size: 11px;
+    line-height: 11px;
+    border-radius: 3px;
+    color: #000;
+    font-family: "Gotham Book", sans-serif !important;
+    font-weight: 400;
+    font-style: normal;
+    -webkit-transition: border 0.3s ease;
+    transition: border 0.3s ease;
     text-align: center;
   }
 
@@ -29,6 +43,40 @@
       visibility: visible;
     }
 
+  }
+
+  .gfield_label {
+    display: none;
+  }
+  .gform_body {
+    position: relative;
+    padding: 0 0 29px;
+  }
+  .validation_message {
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    bottom: 6px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 14px;
+    line-height: 18px;
+    color: #ed1b24;
+    @include main-font6();
+    -webkit-transition: opacity 0.3s ease, visibility 0.3s ease;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+  }
+  .gforms_confirmation_message {
+    margin-top: 49px;
+  }
+  .gform_confirmation_message {
+    @include flexbox();
+    @include flex-direction(column);
+    @include align-items(center);
+    @include justify-content(space-between);
+    height: 250px;
+    padding: 0 60px;
   }
 
 }
@@ -62,8 +110,6 @@
   padding: 0 0 29px;
 }
 .sign-up__error {
-  opacity: 0;
-  visibility: hidden;
   position: absolute;
   bottom: 6px;
   left: 0;
@@ -101,15 +147,35 @@
   }
   .sign-up {
 
-    input[type="submit"].site__input,
-    input[type="text"].site__input,
-    input[type="password"].site__input,
-    textarea.site__input,
-    input[type="email"].site__input,
-    input[type="tel"].site__input,
-    input[type="phone"].site__input,
-    input[type="number"].site__input {
+    input[type="submit"],
+    input[type="text"],
+    input[type="password"],
+    textarea,
+    input[type="email"],
+    input[type="tel"],
+    input[type="phone"],
+    input[type="number"] {
       height: 56px;
+      padding: 8px 18px;
+      font-size: 21px;
+      line-height: 21px;
+      border-width: 2px;
+    }
+
+    .gform_body {
+      padding: 0 107px 39px;
+    }
+    .validation_message {
+      bottom: auto;
+      top: 5px;
+      left: auto;
+      right: 0;
+      width: 91px;
+      font-size: 16px;
+      line-height: 20px;
+      text-align: left;
+    }
+    .gforms_confirmation_message {
     }
 
   }
