--- a/app/sass/_site.scss
+++ b/app/sass/_site.scss
@@ -391,7 +391,21 @@ input[type="email"].site__input,
 input[type="tel"].site__input,
 input[type="phone"].site__input,
 input[type="number"].site__input {
-
+  display: inline-block;
+  width: 100%;
+  height: 30px;
+  background: transparent;
+  border: 1px solid #512c1d;
+  padding: 8px 5px;
+  font-size: 11px;
+  line-height: 11px;
+  border-radius: 3px;
+  color: #000;
+  font-family: "Gotham Book", sans-serif !important;
+  font-weight: 400;
+  font-style: normal;
+  -webkit-transition: border 0.3s ease;
+  transition: border 0.3s ease;
 
   &.not-touched,
   &.not-valid {
